# OC

lab1/LinuxSystemInfo/: LinuxSystemInfo.cpp  LinuxSystemInfo.sln  LinuxSystemInfo.vcxproj  LinuxSystemInfo.vcxproj.filters
lab1/PrimeChecker/: Decode.vcxproj  Decode.vcxproj.filters  PrimeChecker.cpp  commands.txt
lab1/SysInfoLinuxWindows/: CMakeLists.txt  ISysInfo.h  LinuxSysInfo.cpp  LinuxSysInfo.h  SysInfo.h  SysInfoFactory.cpp  SysInfoFactory.h  SysInfoLinuxWindows.sln  SysInfoLinuxWindows.vcxproj  SysInfoLinuxWindows.vcxproj.filters  WindowsSysInfo.cpp  WindowsSysInfo.h  main  main.cpp
lab1/SystemInfo/: SystemInfo.cpp  SystemInfo.sln  SystemInfo.vcxproj
lab1/temp/: all.txt  wchelp-reversed.txt  wchelp.txt
lab2/: lab2.sln
lab2/task_1/: main.cpp  task_1.vcxproj
lab2/task_2/: CDirHandle.cpp  CDirHandle.h  CMakeLists.txt  main.cpp  task_2.vcxproj  task_2.vcxproj.filters
lab2/task_3/: CMakeLists.txt  grepPid.txt  main.cpp  task_3.vcxproj  task_3.vcxproj.filters
lab2/task_4/: CMakeLists.txt  main.cpp  task_4.vcxproj  task_4.vcxproj.filters
lab3/: lab3.sln  lab3.vcxproj  lab3.vcxproj.filters  t.txt
lab3/t_1/: CMakeLists.txt  SignalHander.cpp  SignalHanderLinux.cpp  SignalHanderWindows.cpp  SignalHandler.h  SignalHandlerLinux.h  SignalHandlerWindows.h  main.cpp  t_1.vcxproj  t_1.vcxproj.filters
lab3/task_1/: CMakeCache.txt  Makefile  MySignalHandler  cmake_install.cmake
lab3/task_1_/: CMakeLists.txt  SignalHandler.cpp  SignalHandler.h  SignalHandlerLinux.cpp  SignalHandlerLinux.h  SignalHandlerWindows.cpp  SignalHandlerWindows.h  main.cpp  task_1_.vcxproj  task_1_.vcxproj.filters
lab3/task_2/: CMakeLists.txt  cmake_install.cmake  main.cpp  task_2.vcxproj
lab3/task_3/: CMakeLists.txt  Pipe.cpp  Pipe.h  main.cpp  task_3.vcxproj  task_3.vcxproj.filters  utils.cpp
lab4/: lab4.sln
lab4/task_1/: FileHandler.cpp  FileHandler.h  FlipCase.cpp  FlipCase.h  task_1.cpp  task_1.vcxproj  task_1.vcxproj.filters
lab4/task_2/: task_2.cpp  task_2.vcxproj
lab4/task_3/: new.txt  task_3.cpp  task_3.vcxproj  task_3.vcxproj.filters
lab4/tasks/: tasks.vcxproj
lab5/: lab5.sln
lab5/task1/: 1.txt  task1.cpp  task1.vcxproj  task1.vcxproj.filters
lab5/task_1/: task_1.cpp
lab5/task_2/: BgThreadDispatcher.cpp  BgThreadDispatcher.h  task_2.vcxproj  task_2.vcxproj.filters
lab5/task_2_tests/: task_2_tests.cpp  task_2_tests.vcxproj  task_2_tests.vcxproj.filters
lab5/task_3/: ThreadPool.h  task_3.cpp  task_3.vcxproj  task_3.vcxproj.filters
lab5/task_3_tests/: task_3_tests.cpp  task_3_tests.vcxproj  task_3_tests.vcxproj.filters
lab5/task_4/: CMakeLists.txt  Indexer.cpp  Indexer.h  InvertedIndex.cpp  InvertedIndex.h  SearchEngine.h  ThreadPool.h  Utils.cpp  Utils.h  main.cpp  task_4.vcxproj  task_4.vcxproj.filters
lab5/tasks/: tasks.cpp  tasks.vcxproj  tasks.vcxproj.filters
lab6/: lab6.sln
lab6/task_1/: MemoryManager.h  task_1.cpp  (+2 more)
lab6/task_2/: CMakeLists.txt  task_2.cpp  task_2.vcxproj  task_2.vcxproj.filters
lab7/: lab7.sln
lab8/: lab8.sln
lab8/task_2/: CMakeLists.txt  Display.cpp  Display.h  EventHandler.cpp  EventHandler.h  Snowflake.cpp  Snowflake.h  main.cpp  task_2.vcxproj  task_2.vcxproj.filters
lab9/: lab9.sln
lab9/tasks/: CMakeLists.txt  Server.h  Socket.h  tasks.cpp  tasks.vcxproj  tasks.vcxproj.filters
(+52 files in other folders)
